--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.2.8",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "web-push": "^3.5.0"
   }
 }
