auth and like feature done

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "Bharat Paliwal",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "nodemon": "^2.0.15",
     "web-push": "^3.5.0"
