--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.15",
+    "redis": "^4.6.7",
     "web-push": "^3.5.0"
   }
 }
