--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest server --config=./test/jest.config.cjs"
   },
   "keywords": [],
   "author": "Bharat Paliwal",
@@ -28,5 +29,9 @@
     "nodemon": "^2.0.15",
     "redis": "^4.6.7",
     "web-push": "^3.5.0"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3"
   }
 }
