--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest server --config=./test/jest.config.cjs"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "Bharat Paliwal",
@@ -14,24 +13,18 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.2.8",
     "node-cache": "^5.1.2",
-    "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.15",
-    "redis": "^4.6.7",
-    "web-push": "^3.5.0"
-  },
-  "devDependencies": {
-    "jest": "^29.6.2",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1",
+    "web-push": "^3.5.0",
+    "winston": "^3.11.0"
   }
 }
